--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "lint:fix": "next lint --fix"
   },
   "dependencies": {
+    "@emotion/react": "11.11.1",
+    "@emotion/styled": "11.11.0",
     "next": "13.4.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "4.9.0",
+    "styled-components": "6.0.0-rc.3"
   },
   "devDependencies": {
     "@types/node": "20.3.1",
