--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "4.9.0",
+    "react-infinite-scroll-component": "6.1.0",
     "styled-components": "6.0.0-rc.3"
   },
   "devDependencies": {
